--- a/templates/WAM_APP_FRED/fred_map.html
+++ b/templates/WAM_APP_FRED/fred_map.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WAM OpenFRED</title>
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/fav/favicon.ico' %}"/>
 </head>
 <body>
 
