--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -244,7 +244,7 @@
       
       </div>
 
-    <script src="{% static 'WAM_APP_FRED/js/app.js' %}"></script>
+    <script src="{% static 'WAM_APP_FRED/foundation/js/app.js' %}"></script>
 
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
