Add icons and class to sidebar tabs

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -69,26 +69,26 @@
                     <ul class="vertical tabs" data-tabs id="offcanvas-tabs">
                       <li class="tabs-title is-active">
                         <a href="#panel-scenario" aria-selected="true">
-                          <img src="{% static 'stemp_abw/img/icons_custom/Windrad.svg' %}">
-                          <h2>Szenario</h2>
+                          <img src="{% static 'WAM_APP_FRED/img/icons_custom/Enavi_Layers_w.svg' %}">
+                          <h2 class="tabs-title__head">Szenario</h2>
                         </a>
                       </li>
                       <li class="tabs-title">
                         <a href="#panel-energy-system">
-                          <img src="{% static 'stemp_abw/img/icons_custom/Windrad.svg' %}">
-                          <h2>Energiesystem</h2>
+                          <img src="{% static 'WAM_APP_FRED/img/icons_custom/Enavi_Energy_w.svg' %}">
+                          <h2 class="tabs-title__head">Energiesystem</h2>
                         </a>
                       </li>
                       <li class="tabs-title">
                         <a href="#panel3v">
-                          <img src="{% static 'stemp_abw/img/icons_custom/Windrad.svg' %}">
-                          <h2>Flächen</h2>
+                          <img src="{% static 'WAM_APP_FRED/img/icons_custom/Enavi_Results_w.svg' %}">
+                          <h2 class="tabs-title__head">Flächen</h2>
                         </a>
                       </li>
                       <li class="tabs-title">
                         <a href="#panel4v">
-                          <img src="{% static 'stemp_abw/img/icons_custom/Windrad.svg' %}">
-                          <h2>Ergebnisse</h2>
+                          <img src="{% static 'WAM_APP_FRED/img/icons_custom/Windrad.svg' %}">
+                          <h2 class="tabs-title__head">Ergebnisse</h2>
                         </a>
                       </li>
                     </ul>
