#6 fixed wrong comment

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -256,7 +256,7 @@
 
               L.marker([53.4554, 9.6211]).addTo(map); // example marker to quickly show if map loads
 
-              // create a ajax call for LV BranchTee
+              // create a ajax call for locations_dataurl
                 $.ajax({
                     url: locations_dataurl,
                     dataType: 'json',
