--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -11,6 +11,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>open_FRED</title>
+    <link rel="shortcut icon" type="image/png" href="{% static '/WAM_APP_FRED/img/fav/favicon.ico' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'stemp_abw/img/ionicons-2.0.1/css/ionicons.css' %}">
     <link rel="stylesheet" href="{% static 'WAM_APP_FRED/foundation/css/app.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
@@ -21,16 +22,16 @@
   <body>
 
     <div class="l-bg-color-w u-vh--100">
-    
+
         <!-- TOP NAVIGATION START -->
         <!-- MAIN NAVIGATION START -->
-            
+
         <nav>
           <div class="title-bar" id="nav-container" data-responsive-toggle="simple-menu" data-hide-for="medium">
             <button class="menu-icon" type="button" data-toggle></button>
             <div class="title-bar-title"></div>
           </div>
-          
+
           <div class="top-bar" id="simple-menu">
             <div class="top-bar-left show-for-large">
               <ul class="menu">
@@ -53,14 +54,14 @@
             </div>
           </div>
         </nav>
-            
+
         <!-- MAIN NAVIGATION END -->    <!-- TOP NAVIGATION END -->
-        
+
         <div class="off-canvas-wrapper off-canvas-wrapper--left">
-      
+
           <!-- OFF CANVAS START -->
           <div class="off-canvas position-left" id="offCanvas" data-off-canvas data-close-on-click="false" data-content-overlay="false" data-transition="overlap" style="color: black; overflow-y: hidden">
-            
+
             <div class="grid-y medium-grid-frame">
               <div class="cell medium-auto medium-cell-block-container">
                 <div class="grid-x">
@@ -68,26 +69,26 @@
                     <ul class="vertical tabs" data-tabs id="offcanvas-tabs">
                       <li class="tabs-title is-active">
                         <a href="#panel-scenario" aria-selected="true">
-                          <img src="{% static 'stemp_abw/img/icons_custom/Windrad.svg' %}">
-                          <h2>Szenario</h2>
+                          <img src="{% static 'WAM_APP_FRED/img/icons_custom/Enavi_Layers_w.svg' %}">
+                          <h2 class="tabs-title__head">Szenario</h2>
                         </a>
                       </li>
                       <li class="tabs-title">
                         <a href="#panel-energy-system">
-                          <img src="{% static 'stemp_abw/img/icons_custom/Windrad.svg' %}">
-                          <h2>Energiesystem</h2>
+                          <img src="{% static 'WAM_APP_FRED/img/icons_custom/Enavi_Energy_w.svg' %}">
+                          <h2 class="tabs-title__head">Energiesystem</h2>
                         </a>
                       </li>
                       <li class="tabs-title">
                         <a href="#panel3v">
-                          <img src="{% static 'stemp_abw/img/icons_custom/Windrad.svg' %}">
-                          <h2>Flächen</h2>
+                          <img src="{% static 'WAM_APP_FRED/img/icons_custom/Enavi_Results_w.svg' %}">
+                          <h2 class="tabs-title__head">Flächen</h2>
                         </a>
                       </li>
                       <li class="tabs-title">
                         <a href="#panel4v">
-                          <img src="{% static 'stemp_abw/img/icons_custom/Windrad.svg' %}">
-                          <h2>Ergebnisse</h2>
+                          <img src="{% static 'WAM_APP_FRED/img/icons_custom/Windrad.svg' %}">
+                          <h2 class="tabs-title__head">Ergebnisse</h2>
                         </a>
                       </li>
                     </ul>
