--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -68,27 +68,21 @@
                   <div class="cell small-3 offcanvas-tabs__wrapper medium-cell-block-y">
                     <ul class="vertical tabs" data-tabs id="offcanvas-tabs">
                       <li class="tabs-title is-active">
-                        <a href="#panel-scenario" aria-selected="true">
-                          <img src="{% static 'WAM_APP_FRED/img/icons_custom/Enavi_Layers_w.svg' %}">
-                          <h2 class="tabs-title__head">Szenario</h2>
-                        </a>
-                      </li>
-                      <li class="tabs-title">
                         <a href="#panel-energy-system">
                           <img src="{% static 'WAM_APP_FRED/img/icons_custom/Enavi_Energy_w.svg' %}">
-                          <h2 class="tabs-title__head">Energiesystem</h2>
+                          <h2 class="tabs-title__head">Weather Data</h2>
                         </a>
                       </li>
                       <li class="tabs-title">
-                        <a href="#panel3v">
+                        <a href="#panel-scenario">
                           <img src="{% static 'WAM_APP_FRED/img/icons_custom/Enavi_Results_w.svg' %}">
-                          <h2 class="tabs-title__head">Flächen</h2>
+                          <h2 class="tabs-title__head">Power Plant Register</h2>
                         </a>
                       </li>
                       <li class="tabs-title">
                         <a href="#panel4v">
                           <img src="{% static 'WAM_APP_FRED/img/icons_custom/Windrad.svg' %}">
-                          <h2 class="tabs-title__head">Ergebnisse</h2>
+                          <h2 class="tabs-title__head">Feedin-Time Series</h2>
                         </a>
                       </li>
                     </ul>
@@ -98,7 +92,7 @@
                       <div class="tabs-content" data-tabs-content="offcanvas-tabs">
     
                         <!-- First panel content -->
-                        <div class="tabs-panel is-active" id="panel-scenario">
+                        <div class="tabs-panel" id="panel-scenario">
                           <form>
                             <fieldset>
                               <legend>Szenario auswählen 
@@ -118,40 +112,53 @@
                               </div>
                             </fieldset>
                           </form>
-                          <div>
-                            <form method="POST" action="/search">
-                            {% csrf_token %}
-                              <input type="text" name="textfield">
-                            </form>
-                          </div>
+
                           <div class="panel__text panel__text--highlighted">
                             <p id="scenarioPanelText">
-                                <span style="font-weight:700">Status Quo</span><span style="display:inline-block">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</span>
+                                <span style="font-weight:700">Status Quo</span><span style="display:inline-block"></span>
                             </p>
                           </div>
                         </div>
           
                         <!-- Second panel content -->
-                        <div class="tabs-panel" id="panel-energy-system">
+                        <div class="tabs-panel is-active" id="panel-energy-system">
+
+
+
                           <ul class="accordion" data-accordion>
                             <li class="accordion-item accordion-item--no-border is-active" data-accordion-item>
-                              <a href="#" class="accordion-title accordion-title--100">Stromerzeugung</a>
+                              <a href="#" class="accordion-title accordion-title--100">Time Span</a>
                               <div class="accordion-content" data-tab-content >
-                                <p>Panel 1. Lorem ipsum dolor</p>
+                                <div class="tabs-panel is-active" id="panel-energy-system">
+                                  <form id="TimeSpan">
+
+                                    <label for="Start">Start</label>
+                                    <input id="Start">
+                                    <label for="Stop">Stop</label>
+                                    <input id="Stop">
+                                  </form>
                               </div>
                             </li>
                             <li class="accordion-item" data-accordion-item>
-                              <a href="#" class="accordion-title accordion-title--100">Wärmeerzeugung</a>
+                              <a href="#" class="accordion-title accordion-title--100">Variable</a>
                               <div class="accordion-content" data-tab-content>
-                                <textarea></textarea>
-                                <button class="button">I do nothing!</button>
+                                <form id="Variable">
+
+                                  <label>Variable</label>
+                                  <select name="variable">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                  </select>
+                                </form>
                               </div>
                             </li>
                             <li class="accordion-item" data-accordion-item>
-                              <a href="#" class="accordion-title accordion-title--100">Strombedarf</a>
+                              <a href="#" class="accordion-title accordion-title--100">Flag</a>
                               <div class="accordion-content" data-tab-content>
-                                Type your name!
-                                <input type="text"></input>
+                                Some Input:
+                                <input type="text">
                               </div>
                             </li>
                           </ul>
@@ -159,22 +166,12 @@
           
                         <!-- Third panel content -->
                         <div class="tabs-panel" id="panel3v">
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+
                         </div>
           
                         <!-- Fourth panel content -->
                         <div class="tabs-panel" id="panel4v">
-                          <p>Four</p>
+                          <p>This will show some graphs soon</p>
                           <img class="thumbnail" src="{% static 'stemp_abw/img/generic/rectangle-2.jpg' %}">
                         </div>
                       </div>
