Update the view to display the weather stations on the map

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -321,7 +321,17 @@
                       data: {'lat': latlng.lat, 'long': latlng.lng},
                       //success: function(data){alert("youhou" + data);}
                   });
-	};
+	          };
+
+
+	        var dataurl = '{% url 'WAM_APP_FRED:data' %}';
+            // Download GeoJSON via Ajax
+            $.getJSON(dataurl, function (data) {
+                // Add GeoJSON layer
+                 var ft = L.geoJSON(data, myLayerOptions).addTo(map);
+                 console.log(ft)
+
+            });
 
 
 
