--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -271,7 +271,7 @@
                 position: 'topright'
               }).addTo(map);
 
-              L.marker([53.4554, 9.6211]).addTo(map); // example marker to quickly show if map loads
+              //L.marker([53.4554, 9.6211]).addTo(map); // example marker to quickly show if map loads
 
               // CIRCLE MARKER --> maybe outsource this section //////////////////////////////////////
               // create an object with a list of options to style the circle marker
@@ -300,9 +300,8 @@
                     async: true,
                     // if the data-source can be accessed, create a GEOJSON layer
                     success: function(loca){
-
                       // create the GeoJSON layer from the myLayerData object
-                      L.geoJSON(loca, myLayerOptions).addTo(map)
+                      L.geoJSON(loca).addTo(map)
 
                     }
               });
