--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -221,23 +221,23 @@
             <div class="cell medium-8 large-6">
               <ul class="map-footer__logo">
                 <li>
-                  <a href="https://www.energieavantgarde.de/" target="_blank" title="Energieavantgarde Anhalt">
-                    <img class="map-footer__logo-eaa" src="{% static 'stemp_abw/img/EAA_logo.png' %}" alt="Logo Energieavantgarde Anhalt">
+                  <a href="https://www.ovgu.de/" target="_blank" title="Otto von Guericke Universität Magdeburg">
+                    <img class="map-footer__logo-rli" src="{% static 'WAM_APP_FRED/img/ovgu.svg' %}" alt="Logo OVGU">
                   </a>
                 </li>
                 <li>
                   <a href="https://reiner-lemoine-institut.de/" target="_blank" title="Reiner Lemoine Institut">
-                    <img class="map-footer__logo-rli" src="{% static 'stemp_abw/img/rli_logo.png' %}" alt="Logo Reiner Lemoine Institut">
+                    <img class="map-footer__logo-rli" src="{% static 'WAM_APP_FRED/img/rli.svg' %}" alt="Logo Reiner Lemoine Institut">
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.kopernikus-projekte.de/" target="_blank" title="Kopernikus Projekte">
-                    <img class="map-footer__logo-kopernikus" src="{% static 'stemp_abw/img/kopernikus_logo.png' %}" alt="Logo Kopernikus">
+                  <a href="https://reiner-lemoine-institut.de/open_fred-open-feed-time-series-based-renewable-energy-database/" target="_blank" title="open_FRED">
+                    <img class="map-footer__logo-rli" src="{% static 'WAM_APP_FRED/img/open_fred.svg' %}" alt="Logo open_FRED">
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.bmbf.de/" target="_blank" title="Bundesministerium für Bildung und Forschung">
-                    <img class="map-footer__logo-bmbf" src="{% static 'stemp_abw/img/BMBF_widget_final.png' %}" alt="Logo BMBF">
+                  <a href="https://www.bmwi.de/Navigation/DE/Home/home.html" target="_blank" title="Bundesminitserium für Wirtschaft und Energie">
+                    <img class="map-footer__logo-rli" src="{% static 'WAM_APP_FRED/img/bmwi.svg' %}" alt="Logo BMWI">
                   </a>
                 </li>
               </ul>
