Create a simple form for date selection

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -130,6 +130,12 @@
                               <a href="#" class="accordion-title accordion-title--100">Time Span</a>
                               <div class="accordion-content" data-tab-content >
                                 <div class="tabs-panel is-active" id="panel-energy-system">
+                                  <div>Start date
+                                  {{start_date}}
+                                    </div>
+                                  <div>End date
+                                  {{end_date}}
+                                  </div>
                                   <form id="TimeSpan">
 
                                     <label for="Start">Start</label>
