--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -197,7 +197,7 @@
                 <i class="icon ion-android-options"></i>
               </button>
 
-              {% leaflet_map "map" callback="window.map_init_basic" %}
+              {% leaflet_map "map" callback="window.map_init_basic" settings_overrides=leaflet_config%}
       
             </div>
           </main>
